# stack-composer

./: .gitignore  AGENTS.md  LICENSE  PHASE_STATUS.md  README.md  THIRD_PARTY.toml  pyproject.toml
THIRD_PARTY_LICENSES/: Jinja2.txt
docs/: cli.md  development.md
scripts/: build-pyz.sh  generate-third-party.py  spack-build  sync-schema.sh
src/stack_composer/: __init__.py  __main__.py  cli.py  errors.py  schema_registry.py  yaml_io.py
src/stack_composer/commands/: _stub.py  assess_profiles.py  explain.py  licenses.py  publish_manifest.py  render.py  scaffold_templates.py  show.py  validate.py  validate_template_set.py
src/stack_composer/manifest/: __init__.py  draft.py  finalize.py  provenance.py
src/stack_composer/model/: __init__.py  contract.py  deployment.py  manifest.py  package_set.py  profile.py  stack.py
src/stack_composer/render/: __init__.py  context.py  deployment.py  digest.py  engine.py  environments.py  modulefiles.py  mpi.py  narrowing.py  plan.py  platform_modules.py  release.py  scopes.py  spack_specs.py  workspace_validation.py
src/stack_composer/resolve/: __init__.py  (+5 more)
tests/: __init__.py  conftest.py  test_assess_profiles.py  test_build_kind.py  test_cli.py  test_explain.py  test_package_set.py  test_platform_modules.py  test_publish_manifest.py  test_reference_fixture_acceptance.py  test_render.py  test_render_scopes.py  test_scaffold_templates.py  test_schema_drift.py  test_schemas.py  test_scripts.py  test_spack_build_script.py  test_template_set_drift.py  test_validate.py  test_validate_template_set.py  test_workspace_validation.py
(+34 files in other folders)
