[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stack-composer"
version = "0.1.0"
description = "Render and validate Spack stack workspaces from declarative stack content."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "CSE Stack contributors" }
]
dependencies = [
  "click>=8.1,<8.2",
  "fastjsonschema>=2.20,<3",
  "Jinja2>=3.1,<4",
  "MarkupSafe>=2.1,<3",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "build>=1.2,<2",
  "pytest>=8,<9",
  "ruff>=0.6,<1",
  "shiv>=1.0,<2",
  "wheel>=0.44,<1",
]

[project.scripts]
stack-composer = "stack_composer.cli:main"

[tool.setuptools.package-data]
stack_composer = [
  "schemas/*.json",
  "scaffold/starters/*/contract.yaml",
  "scaffold/starters/*/stack-defaults.yaml",
  "scaffold/starters/*/configs/*/*.j2",
  "scaffold/starters/*/environments/*/*.j2",
  "resources/*.toml",
  "resources/THIRD_PARTY_LICENSES/*.txt",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
